# snoreader

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.ja.md  README.md
backend/: pyproject.toml
backend/app/: config.py  database.py  main.py  models.py  schemas.py
backend/app/ai/: llm_client.py  processor.py  summarizer.py  summary_rules.py  tag_matcher.py  tagger.py  task_queue.py
backend/app/routers/: articles.py  exclude_patterns.py  exports.py  feeds.py  imports.py  opml.py  tags.py
backend/app/services/: article_cleanup.py  background_processor.py  content_extractor.py  deduplicator.py  feed_fetcher.py  scheduler.py  url_filters.py  web_search.py
backend/scripts/: backfill_tag_suggestions.py
backend/tests/: test_article_cleanup.py  test_content_extractor.py  test_deduplicator.py  test_exclude_patterns.py  test_processor.py  test_regenerate_summaries.py  test_search.py  test_summarizer.py  test_summary_rules.py  test_tag_matcher.py
docs/superpowers/plans/: 2026-07-20-ai-summary-improvement.md  2026-07-20-article-auto-cleanup.md
docs/superpowers/specs/: 2026-07-20-ai-summary-improvement-design.md  2026-07-20-article-auto-cleanup-design.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/articles/: ArticleCard.tsx  ArticleChatPanel.tsx  ArticleList.tsx  ArticleReader.tsx
frontend/src/components/common/: Spinner.tsx
frontend/src/hooks/: useArticles.ts  useExcludePatterns.ts  useFeeds.ts  useTags.ts
frontend/src/types/: index.ts
(+2 files in other folders)
